--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<!-- only load the mobile lib "sap.m" and the "sap_bluecrystal" theme -->
 
 		<script>
-				sap.ui.localResources("duxhealthdoctorpepapp");
+				sap.ui.localResources("view");
 				var app = new sap.m.App({initialPage:"idmain1"});
-				var page = sap.ui.view({id:"idmain1", viewName:"duxhealthdoctorpepapp.main", type:sap.ui.core.mvc.ViewType.JS});
+				var page = sap.ui.view({id:"idmain1", viewName:"view.main", type:sap.ui.core.mvc.ViewType.JS});
 				app.addPage(page);
 				app.placeAt("content");
 		</script>
